--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "name": "com.darkanviii.library",
     "displayName": "Darkan Library",
-    "version": "1.0",
-    "description": "A very useful package, indeed.",
-    "dependencies": {}
+    "version": "1.0.0",
+    "description": "A very useful package, indeed."
 }
