--- a/package.json
+++ b/package.json
@@ -2,5 +2,6 @@
     "name": "com.darkanviii.library",
     "displayName": "Darkan Library",
     "version": "1.0.0",
-    "description": "A very useful package, indeed."
+    "description": "A very useful package, indeed.",
+    "author": "DarkanVIII"
 }
