--- a/Darkan.Library.asmdef
+++ b/Darkan.Library.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Darkan.Library",
-    "rootNamespace": "",
-    "references": [],
+    "rootNamespace": "Darkan",
+    "references": [
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
