--- a/Darkan.Library.asmdef
+++ b/Darkan.Library.asmdef
@@ -2,7 +2,8 @@
     "name": "Darkan.Library",
     "rootNamespace": "Darkan",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:ad968d605628d06499b62cdc30f11cf8"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
