Removed dependency and added math lib

--- a/package.json
+++ b/package.json
@@ -3,8 +3,5 @@
   "displayName": "Darkan Library",
   "version": "1.0.0",
   "description": "This package depends on Asset Store assets: Odin Inspector and Serializer, DOTween",
-  "author": "DarkanVIII",
-  "dependencies": {
-    "com.unity.textmeshpro": ""
-  }
+  "author": "DarkanVIII"
 }
