--- a/Darkan.Library.Runtime.asmdef
+++ b/Darkan.Library.Runtime.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Darkan.Library",
+    "name": "Darkan.Library.Runtime",
     "rootNamespace": "Darkan",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
