--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "com.darkanviii.library",
   "displayName": "Darkan Library",
   "version": "1.0.0",
-  "description": "This package depends on Asset Store assets: Odin Inspector and Serializer, DOTween",
+  "description": "This package depends on Asset Store assets: Odin Inspector and Serializer",
   "author": "DarkanVIII"
 }
